[project]
name = "ai-interview-coach"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fpdf2>=2.8.7",
    "python-dotenv>=1.2.1",
    "streamlit>=1.54.0",
    "vision-agents[deepgram,gemini,getstream,ultralytics]>=0.3.8",
]
